# proc-macro-workshop

./: Cargo.toml  main.rs
builder/: Cargo.toml
builder/examples/: t.rs
builder/src/: context.rs  lib.rs
