[package]
name = "derive_builder"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# TODO
syn="1.0.86"
quote="1.0.15"
proc-macro2="1.0.36"
